--- a/lab6/RegistrationForm.html
+++ b/lab6/RegistrationForm.html
@@ -11,7 +11,7 @@
                             <h1 > Registration Form in PHP</h3>
                         </div>
                         <div class="form-body">
-                            <form action="insert.php" method="post">
+                            <form action="phpbasics.php" method="post">
                                 <Label>Enter UserName</Label>
                                 <input type="text"  placeholder=" User Name " name="name">
                                 <br><br>
@@ -21,8 +21,18 @@
                                 <Label>Enter Age</Label>
                                 <input type="number"  placeholder=" User Age " name="age">
                                 <br><br>
+                                <label>Gender</label>
+				                    <select name="gender">
+					                        <option value="male">Male</option>
+					                        <option value="female">Female</option>
+					                        <option value="other">Other</option>
+				                    </select>
+                                <br><br>
+                                <label>Birthday:</label>
+                                <input type="date" name="birthday">
                                <!--<input type="submit" name="submit" value="Submit">--> 
-                               <button name="submit">Submit</button>
+                               <br><br>
+                               <input type="submit" name="submit" value="Submit">
                             </form>
 
                         </div>
