Final Version Of Lab6

--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" a href="CSS/styles.css"/> 
+    <!-- CSS : Inline CSS(inside the <tag>),Internal CSS(inside tag <style> within tag<head>) & External CSS<separate file> -->
+
     <title>Registration Form</title>
 </head>
 <body >
